--- a/ken-the-programmer/_config.yml
+++ b/ken-the-programmer/_config.yml
@@ -1,14 +1,15 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Ken-The-Programmer.com ~ Home Site for Kenneth Posey
+email: kenneth.posey@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+  This site is hosted on github pages and built with atom.io text editor.
+baseurl: "/" # the subpath of your site, e.g. /blog/
+url: "http://ken-the-programmer.com" # the base hostname & protocol for your site
+twitter_username: mr_pleco
+github_username:  kenneth-posey
 
 # Build settings
 markdown: kramdown
+
+# Extras
+highlighting: pygments linenos
